update html file

--- a/index.html.html
+++ b/index.html.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello World.', 'Console Text', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Hello Elchin.', 'This is your wifes bot :)', 'She made it for you with love!.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
