--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello Elchin.', 'This is your wifes bot :)', 'She made it for you with love!.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Hello, CodeWeek! :)', 'Happy 10th anniversary! <3, 'With warm Greeting from Latvia!'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
